# pcr

./: CMakeLists.txt  LICENSE  build.bat
cmake/: external_json.cmake
libs/channel/: CMakeLists.txt
libs/channel/include/pcr/channel/: any_stream.h  fd_ownership.h  fd_stream.h  pipe_stream.h  socket_stream.h  stream.h
libs/channel/src/: fd_stream.cpp  pipe_stream.cpp  socket_stream.cpp
libs/framing/: CMakeLists.txt
libs/framing/include/pcr/framing/: any_framer.h  content_length_framer.h  frame_stats.h  framer.h  length_prefix_framer.h  ndjson_framer.h
libs/framing/src/: content_length_framer.cpp  length_prefix_framer.cpp  ndjson_framer.cpp
libs/proc/: CMakeLists.txt
libs/proc/src/: child_proc_posix.cpp
libs/rpc/: CMakeLists.txt
libs/rpc/codec/nlohmann/: CMakeLists.txt
libs/rpc/codec/nlohmann/include/pcr/rpc/codec/: nlohmann.h
libs/rpc/codec/nlohmann/src/: nlohmann.cpp
libs/rpc/core/: CMakeLists.txt
libs/rpc/core/include/pcr/rpc/: any_codec.h  clock.h  codec.h  dispatcher.h  encode.h  error.h  id.h  message.h  metrics.h  peer.h
libs/rpc/core/src/: dispatcher.cpp  encode.cpp  peer.cpp
pcr/framing/: CMakeLists.txt  content_length_framer.cpp  content_length_framer.h  length_prefix_framer.cpp  length_prefix_framer.h  ndjson_framer.cpp  ndjson_framer.h
pcr/ipc/: CMakeLists.txt  stdio_jsonrpc_session.cpp  stdio_jsonrpc_session.h  stdio_jsonrpc_transport.cpp  stdio_jsonrpc_transport.h
pcr/jsonrpc/: CMakeLists.txt  any_codec.h  clock.h  codec.h  dispatcher.cpp  dispatcher.h  encode.cpp  encode.h  error.h  id.h  message.h  metrics.h  peer.cpp  peer.h
pcr/jsonrpc/codec/: nlohmann.cpp  nlohmann.h
pcr/proc/: CMakeLists.txt  child_proc.h  child_proc_posix.cpp  child_proc_win.cpp
pcr/rpc/: CMakeLists.txt  any_codec.h  codec.h  dispatcher.cpp  dispatcher.h  encode.cpp  encode.h  message.h  peer.cpp  peer.h
pcr/rpc/codec/: nlohmann.cpp  nlohmann.h
pcr/stream/: CMakeLists.txt  any_stream.h  fd_ownership.h  fd_stream.cpp  fd_stream.h  pipe_stream.cpp  pipe_stream.h  socket_stream.cpp  socket_stream.h  stream.h
tests/: CMakeLists.txt  run_tests.sh  test_channel_invalid_fd.cpp  test_channel_socketpair.cpp  test_proc_piped_win.cpp  test_proc_redirection.cpp  test_proc_spawn_fail.cpp  test_proc_terminate.cpp
tests/channel/: test_channel_proc_pipes.cpp  test_channel_read_exact.cpp  test_channel_socketpair.cpp
tests/framing/: test_framing_content_length_pipes_two_frames.cpp  test_framing_content_length_two_frames.cpp  test_framing_length_prefix_chunky_reads.cpp  test_framing_length_prefix_eof_mid_body.cpp  test_framing_length_prefix_eof_mid_prefix.cpp  test_framing_length_prefix_too_large.cpp  test_framing_length_prefix_two_frames.cpp  test_framing_length_prefix_zero_length.cpp  test_framing_ndjson.cpp
tests/ipc/: test_stdio_jsonrpc_inherit_stderr.cpp  test_stdio_jsonrpc_server.cpp  test_stdio_jsonrpc_transport.cpp
tests/jsonrpc/: test_jsonrpc_content_length_pipes.cpp  test_jsonrpc_content_length_pipes_roundtrip.cpp
tests/proc/: test_proc_piped_cat.cpp  test_proc_redirection.cpp  test_proc_spawn_fail.cpp  test_proc_terminate.cpp
tests/rpc/: test_rpc_content_length_pipes_roundtrip.cpp
tests/stream/: test_stream_invalid_fd.cpp  test_stream_pipe_win.cpp  test_stream_proc_pipes.cpp  test_stream_read_exact.cpp  test_stream_socketpair.cpp
